--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -18,7 +18,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Fluoroplast Engineers</title>
   </head>
   <body>
     <div id="root"></div>
