--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -17,6 +17,7 @@
       type="text/css"
       href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css"
     />
+    
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Fluoroplast Engineers</title>
   </head>
@@ -24,4 +25,5 @@
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
+  <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 </html>
